SET(BatchMakeLib_SRCS
  ${BatchMakeLib_SRCS}
  bmLaunch.cxx
  bmProgressManager.cxx
  bmScriptAction.cxx
  bmScriptActionManager.cxx
  bmScriptError.cxx
  bmScriptParser.cxx
  )

SET(BatchMakeLib_HDRS
  bmLaunch.h
  bmProgressManager.h
  bmScriptAction.h
  bmScriptActionManager.h
  bmScriptError.h
  bmScriptParser.h
  bmSplashScreenControls.h
  bmIcons.h
  bmScriptEchoAction.h
  bmScriptForEachAction.h
  bmScriptForNFoldAction.h
  bmScriptGetParamAction.h
  bmScriptIfAction.h
  bmScriptRandomizeAction.h
  bmScriptRunAction.h
  bmScriptSequenceAction.h
  bmScriptSetAction.h
  bmScriptSetAppAction.h
  bmScriptSetAppOptionAction.h
  bmScriptListFileInDirAction.h
  bmScriptListDirInDirAction.h
  bmScriptIncAction.h
  bmScriptIntAction.h
  bmScriptWriteFileAction.h
  bmScriptAppendFileAction.h
  bmScriptExtractSliceAction.h
  bmScriptExtractStringAction.h
  bmScriptIncludeAction.h
  bmScriptSinAction.h
  bmScriptDeleteFileAction.h
  bmScriptRegExAction.h
  bmScriptMakeDirectoryAction.h
  bmEditor.h
  bmSplashScreenControls.h
  ApplicationWrapper.h
  ApplicationWrapperParam.h
  bmScriptGetTimeAction.h
  bmScriptGetCurrentDateTimeAction.h
  bmScriptGlobAction.h
  bmScriptGetFilenameAction.h
  bmScriptConvertImageAction.h
  bmScriptFileExistsAction.h
  )

#Add Commands
SET(BatchMakeLib_SRCS
  ${BatchMakeLib_SRCS}
  bmScriptEchoAction.cxx
  bmScriptForEachAction.cxx
  bmScriptForNFoldAction.cxx
  bmScriptGetParamAction.cxx
  bmScriptIfAction.cxx
  bmScriptRandomizeAction.cxx
  bmScriptRunAction.cxx
  bmScriptSequenceAction.cxx
  bmScriptSetAction.cxx
  bmScriptSetAppAction.cxx
  bmScriptSetAppOptionAction.cxx
  bmScriptListFileInDirAction.cxx
  bmScriptListDirInDirAction.cxx
  bmScriptIncAction.cxx
  bmScriptIntAction.cxx
  bmScriptWriteFileAction.cxx
  bmScriptAppendFileAction.cxx
  bmScriptExtractSliceAction.cxx
  bmScriptExtractStringAction.cxx
  bmScriptIncludeAction.cxx
  bmScriptSinAction.cxx
  bmScriptDeleteFileAction.cxx
  bmScriptRegExAction.cxx
  bmScriptMakeDirectoryAction.cxx
  ApplicationWrapper.cxx
  ApplicationWrapperParam.cxx
  bmScriptGetTimeAction.cxx
  bmScriptGetCurrentDateTimeAction.cxx
  bmScriptGlobAction.cxx
  bmScriptGetFilenameAction.cxx
  bmScriptConvertImageAction.cxx
  bmScriptFileExistsAction.cxx
  )
  
IF(USE_FLTK)

  SET(BatchMakeLib_HDRS
    ${BatchMakeLib_HDRS}
    bmEditor.h
    bmScriptEditorGUIBase.h
    bmScriptEditorGUIControls.h
    bmProgressGUIBase.h
    bmProgressGUIControls.h
    bmProgressManagerGUI.h
    bmScriptErrorGUI.h
    bmSplashScreenControls.h
    bmScriptEditorGUIControls.h
    bmSplashScreenControls.h
    bmScriptErrorGUI.h
    bmProgressManagerGUI.h
    bmProgressGUIControls.h
    bmApplicationListGUIBase.h
    bmApplicationListGUIControls.h
    bmApplicationWrapperGUIBase.h
    bmApplicationWrapperGUIControls.h
    )
    
  SET(BatchMakeLib_SRCS
    ${BatchMakeLib_SRCS}
    bmScriptEditorGUIControls.cxx
    bmSplashScreenControls.cxx
    bmScriptErrorGUI.cxx
    bmProgressManagerGUI.cxx
    bmProgressGUIControls.cxx
    bmApplicationListGUIControls.cxx
    bmApplicationWrapperGUIControls.cxx
    bmEditor.cxx
    )
  
  SET(BatchMakeLib_GUI_SRCS
    bmProgressGUI.fl
    bmScriptEditorGUI.fl
    bmSplashScreen.fl
    bmApplicationListGUI.fl
    bmApplicationWrapperGUI.fl
    )

  SET(FLTK_WRAP_UI 1)
  FLTK_WRAP_UI( BatchMakeLib ${BatchMakeLib_GUI_SRCS} )

  ADD_LIBRARY(BatchMakeLib ${BatchMakeLib_SRCS} ${BatchMakeLib_FLTK_UI_SRCS})

  # Following is needed to ensure the existence of CondorWatcherGUI
  #  generated by fluid when BatchMakeUtilities is built
  ADD_DEPENDENCIES(BatchMakeLib BatchMakeUtilities)

  IF(FLTK_FOUND)
    IF(CYGWIN)
      TARGET_LINK_LIBRARIES(BatchMakeLib 
        ole32 uuid comctl32 wsock32 supc++ -lm -lgdi32
	)
    ENDIF(CYGWIN)
  ENDIF(FLTK_FOUND)

ELSE(USE_FLTK)

  ADD_LIBRARY(BatchMakeLib ${BatchMakeLib_SRCS})

ENDIF(USE_FLTK)


# Installation file
INSTALL(TARGETS BatchMakeLib
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib/BatchMake
        ARCHIVE DESTINATION lib/BatchMake
        )
INSTALL(FILES ${BatchMake_HDRS}  ${BatchMakeLib_HDRS}  
        DESTINATION include/BatchMake/Code)
INSTALL(FILES CMakeLists.txt DESTINATION source/Code)
INSTALL(FILES ${BatchMakeLib_SRCS} DESTINATION source/Code)
IF(USE_FLTK)
  INSTALL(FILES ${BatchMakeLib_GUI_SRCS} DESTINATION source/Code)
ENDIF(USE_FLTK)

